<resources>
    <string name="app_name">E-kan Penjual</string>
    <string name="login_title">Masuk ke akun kamu</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="login">Masuk</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="register">Daftar</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="register_title">Buat akun baru</string>
    <string name="name">Nama</string>
    <string name="address">Alamat</string>
    <string name="phone">No HP</string>
    <string name="resend_code">Kirim ulang kode</string>
    <string name="otp_desc">Masukkan 4 digit kode yang dikirimkan ke email kamu</string>
    <string name="otp_title">Kode verifikasi telah dikirim!</string>
    <string name="email_pass_not_match">Maaf Email / Kata Sandi Anda Salah</string>
    <string name="email_not_registered">Maaf Email Anda Belum Terdaftar</string>
    <string name="try_again">Silahkan Coba Lagi</string>
    <string name="otp_not_match">Kode OTP tidak cocok</string>
    <string name="email_cant_empty">Email tidak boleh kosong</string>
    <string name="email_format_error">Format email salah</string>
    <string name="password_cant_empty">Kata sandi tidak boleh kosong</string>
    <string name="shop_name">Nama Toko</string>
    <string name="add_product">Tambah Produk</string>
    <string name="brand">e-Kan</string>
    <string name="menu">Menu</string>
    <string name="product">Produk</string>
    <string name="settings">Setting</string>
    <string name="time_chart">Grafik Penjualan</string>
    <string name="top_5_products">5 Produk Terlaris</string>
    <string name="change_photo">Ganti foto</string>
    <string name="product_name">Nama Produk</string>
    <string name="product_desc">Deskripsi Produk</string>
    <string name="product_price">Harga Produk (Rp)</string>
    <string name="product_weight">Berat Produk (Kg)</string>
    <string name="product_qty">Jumlah Stok</string>
    <string name="order_list">Daftar Pesanan</string>
    <string name="profile">Profil</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="save">Simpan</string>
    <string name="privacy_policy">Kebijakan Privasi</string>
    <string name="terms_condition">Ketentuan Layanan</string>
    <string name="logout">Logout</string>
    <string name="notification">Notifikasi</string>
    <string name="confirm_logout">Apakah Anda Yakin Ingin Keluar?</string>
    <string name="no">Tidak</string>
    <string name="yes">Ya</string>
    <string name="fish_weight">%1$s Kg</string>
    <string name="confirm_delete">Apakah Anda yaking ingin menhapus produk ini?</string>
    <string name="fish_detail_qty">x%1$s</string>
    <string name="fish_detail_price">Rp %1$s</string>
    <string name="show_all">tampilkan semua</string>
    <string name="unprocessed">belum diproses</string>
    <string name="processed">diproses</string>
    <string name="sent">dikirim</string>
    <string name="done">selesai</string>
    <string name="empty_stock">stok kosong</string>
    <string name="btn_back">tombol kembali</string>
    <string name="detail_date_order">Tanggal Pesanan</string>
    <string name="detail_user_name">Nama Pemesan</string>
    <string name="detail_order">Detail Pesanan</string>
    <string name="detail_note">Catatan</string>
    <string name="detail_order_address">Alamat Pengantaran</string>
    <string name="btn_notification">tombol notifikasi</string>
    <string name="btn_edit_profile">tombol edit profil</string>
    <string name="btn_product">tombol produk</string>
    <string name="btn_order">tombol daftar pesanan</string>
    <string name="btn_settings">tombol setting</string>
    <string name="separator_dot">separator</string>
    <string name="dropdown_logo">logo dropdown</string>
    <string name="status_filter">Filter status pesanan</string>
    <string name="btn_edit_product">tombol edit produk</string>
    <string name="total_product_sales">Jumlah penjualan produk</string>
    <string name="last_month">1 Bulan terakhir</string>
    <string name="last_year">1 Tahun terakhir</string>
    <string name="img_empty">image empty</string>

    <string name="token_auth">Bearer %1$s</string>
    <string name="product_hidden">produk disembunyikan</string>

    <string-array name="status_filter">
        <item>tampilkan semua</item>
        <item>belum diproses</item>
        <item>diproses</item>
        <item>dikirim</item>
        <item>selesai</item>
    </string-array>

</resources>